Orinoco Magazine Second Commit: Added a h1 Title, an overlay for the showcase, banner one and banner two sections with z-index and position-absolute

--- a/index.html
+++ b/index.html
@@ -29,22 +29,22 @@
                     <a href="#">Wild Life</a>
                 </li>
                 <li>
-                    <a href="#">Nature</a>
-                </li>
-                <li>
-                    <a href="#">Eco-life</a>
-                </li>
-                <li>
                     <a href="#">Endangered Species</a>
                 </li>
                 <li>
                     <a href="#">Conservation</a>
                 </li>
                 <li>
-                    <a href="#">Our Philosophy</a>
+                    <a href="#">Nature & Friendships</a>
+                </li>
+                <li>
+                    <a href="#">Our Philosphy</a>
                 </li>
                 <li>
                     <a href="#">News</a>
+                </li>
+                <li>
+                    <a href="#">Stories</a>
                 </li>  
             </ul>
             <ul class="nav-menu-right">
@@ -58,13 +58,13 @@
         </nav>
         <hr>
 
-        <!--SHOWCASE-->
+        <!--SHOWCASE SHOWCASE-->
         <header class="showcase">
-            <div class="content">
+            <div class="site-title">
                 <h1>Wild Life News and Stories</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur ratione impedit veritatis optio architecto quaerat ipsa molestiae distinctio aliquam magni, nemo at, illo maiores est aspernatur! Nesciunt illum dolore esse!</p>
-                <a href="#" class="btn">Read More <i class="fas fa-angle-double-right"></i></a>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, voluptatibus dolores! Inventore minima, sint voluptatem dolore dolor quam voluptas, et in eius temporibus nemo totam!</p>
             </div>
+            <div class="overlay"></div>
         </header>
 
         <!--NEWS CARDS ONE-->
@@ -102,6 +102,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga consequatur illo eligendi quasi veritatis beatae nesciunt libero laboriosam, blanditiis nisi.</p>
                 <a href="#"class="btn">Read More <i class="fas fa-angle-double-right"></i></a>
             </div>
+            <div class="overlay"></div>
         </section>
 
         <!--NEWS CARDS TWO-->
@@ -136,9 +137,10 @@
          <section class="cards-banner-two">
              <div class="content">
                  <h2>Lorem, ipsum dolor.</h2>
-                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit natus repellat porro officiis voluptas voluptatibus nesciunt, explicabo unde culpa, a rerum quaerat. Ipsum voluptate facere repudiandae magnam</p>
+                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit natus repellat porro officiis voluptas voluptatibus nesciunt, explicabo unde culpa, a rerum quaerat.</p>
                  <a href="#" class="btn">Read More <i class="fas fa-angle-double-right"></i></a>
              </div>
+             <div class="overlay"></div>
          </section>
 
          <!--SOCIAL-->
