Orinoco Magazine Third Commit:Added z-index 3 to the Menu button, h2 Title to the News Cards Section and Copyright Symbol to the footer

--- a/index.html
+++ b/index.html
@@ -32,10 +32,7 @@
                     <a href="#">Endangered Species</a>
                 </li>
                 <li>
-                    <a href="#">Conservation</a>
-                </li>
-                <li>
-                    <a href="#">Nature & Friendships</a>
+                    <a href="#">Nature & Friends</a>
                 </li>
                 <li>
                     <a href="#">Our Philosphy</a>
@@ -45,6 +42,9 @@
                 </li>
                 <li>
                     <a href="#">Stories</a>
+                </li>
+                <li>
+                    <a href="#">Subscribe</a>
                 </li>  
             </ul>
             <ul class="nav-menu-right">
@@ -68,6 +68,10 @@
         </header>
 
         <!--NEWS CARDS ONE-->
+        <div class="news-title">
+            <h2>News from the Amazonian Rainforest</h2>
+        </div>
+        <hr>
         <div class="news-cards">
             <div>
                 <img src="img/news1.jpg" alt="news1">
@@ -100,12 +104,15 @@
             <div class="content">
                 <h2>Lorem, ipsum dolor.</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga consequatur illo eligendi quasi veritatis beatae nesciunt libero laboriosam, blanditiis nisi.</p>
-                <a href="#"class="btn">Read More <i class="fas fa-angle-double-right"></i></a>
             </div>
             <div class="overlay"></div>
         </section>
 
         <!--NEWS CARDS TWO-->
+        <div class="news-title">
+            <h2>Stories from the Serengeti</h2>
+        </div>
+        <hr>
         <div class="news-cards">
             <div>
                 <img src="img/news5.jpg" alt="news1">
@@ -145,8 +152,10 @@
 
          <!--SOCIAL-->
          <section class="social">
-             <div class="links">
+             <div class="subscribe">
                 <a href="#" class="btn">Subscribe</a>
+             </div>
+             <div class="links">
                  <a href="#">
                      <i class="fab fa-facebook-f"></i>
                  </a>
@@ -161,12 +170,11 @@
                 </a>
              </div>
          </section>
-
     </div>
 
     <!--FOOTER-->
     <footer class="footer">
-        <h3>Orinoco Magazine 2020</h3>
+        <h3>&copy; Adrian Fuentes Creativo 2020</h3>
     </footer>
 
     <!--SCROLL REVEAL-->
