--- a/index.html
+++ b/index.html
@@ -29,22 +29,22 @@
                     <a href="#">Wild Life</a>
                 </li>
                 <li>
-                    <a href="#">Nature</a>
-                </li>
-                <li>
-                    <a href="#">Eco-life</a>
-                </li>
-                <li>
                     <a href="#">Endangered Species</a>
                 </li>
                 <li>
-                    <a href="#">Conservation</a>
+                    <a href="#">Nature & Friends</a>
                 </li>
                 <li>
-                    <a href="#">Our Philosophy</a>
+                    <a href="#">Our Philosphy</a>
                 </li>
                 <li>
                     <a href="#">News</a>
+                </li>
+                <li>
+                    <a href="#">Stories</a>
+                </li>
+                <li>
+                    <a href="#">Subscribe</a>
                 </li>  
             </ul>
             <ul class="nav-menu-right">
@@ -58,16 +58,20 @@
         </nav>
         <hr>
 
-        <!--SHOWCASE-->
+        <!--SHOWCASE SHOWCASE-->
         <header class="showcase">
-            <div class="content">
+            <div class="site-title">
                 <h1>Wild Life News and Stories</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur ratione impedit veritatis optio architecto quaerat ipsa molestiae distinctio aliquam magni, nemo at, illo maiores est aspernatur! Nesciunt illum dolore esse!</p>
-                <a href="#" class="btn">Read More <i class="fas fa-angle-double-right"></i></a>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, voluptatibus dolores! Inventore minima, sint voluptatem dolore dolor quam voluptas, et in eius temporibus nemo totam!</p>
             </div>
+            <div class="overlay"></div>
         </header>
 
         <!--NEWS CARDS ONE-->
+        <div class="news-title">
+            <h2>News from the Amazonian Rainforest</h2>
+        </div>
+        <hr>
         <div class="news-cards">
             <div>
                 <img src="img/news1.jpg" alt="news1">
@@ -100,11 +104,15 @@
             <div class="content">
                 <h2>Lorem, ipsum dolor.</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga consequatur illo eligendi quasi veritatis beatae nesciunt libero laboriosam, blanditiis nisi.</p>
-                <a href="#"class="btn">Read More <i class="fas fa-angle-double-right"></i></a>
             </div>
+            <div class="overlay"></div>
         </section>
 
         <!--NEWS CARDS TWO-->
+        <div class="news-title">
+            <h2>Stories from the Serengeti</h2>
+        </div>
+        <hr>
         <div class="news-cards">
             <div>
                 <img src="img/news5.jpg" alt="news1">
@@ -136,15 +144,18 @@
          <section class="cards-banner-two">
              <div class="content">
                  <h2>Lorem, ipsum dolor.</h2>
-                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit natus repellat porro officiis voluptas voluptatibus nesciunt, explicabo unde culpa, a rerum quaerat. Ipsum voluptate facere repudiandae magnam</p>
+                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit natus repellat porro officiis voluptas voluptatibus nesciunt, explicabo unde culpa, a rerum quaerat.</p>
                  <a href="#" class="btn">Read More <i class="fas fa-angle-double-right"></i></a>
              </div>
+             <div class="overlay"></div>
          </section>
 
          <!--SOCIAL-->
          <section class="social">
-             <div class="links">
+             <div class="subscribe">
                 <a href="#" class="btn">Subscribe</a>
+             </div>
+             <div class="links">
                  <a href="#">
                      <i class="fab fa-facebook-f"></i>
                  </a>
@@ -159,12 +170,11 @@
                 </a>
              </div>
          </section>
-
     </div>
 
     <!--FOOTER-->
     <footer class="footer">
-        <h3>Orinoco Magazine 2020</h3>
+        <h3>&copy; Adrian Fuentes Creativo 2020</h3>
     </footer>
 
     <!--SCROLL REVEAL-->
